# CS302_Project_Compress

Data-Compression/d_compress/include/: coding_1.h  frame_io.h
Data-Compression/d_compress/src/: coding_1.cpp
Data-Compression/entropy_cal/: CMakeLists.txt  entropy_calculate.cpp
Data-Compression/lz_compress/: CMakeLists.txt  compress_engine_1.cpp
Data-Compression/lz_compress/include/: lz_div.h
Data-Compression/lz_compress/src/: lz_div.cpp
Data-Compression/mixed_compress/: CMakeLists.txt  mix_compress_engine_1.cpp
Data-Compression/mixed_compress(failed)/: CMakeLists.txt
Data-Compression/mixed_compress(failed)/lz_compress/: compress_engine_1.cpp
Data-Compression/mixed_compress(failed)/lz_compress/include/: lz_div.h
Data-Compression/mixed_compress(failed)/lz_compress/src/: lz_div.cpp
Data-Compression/mixed_compress/d_compress/src/: coding_1.cpp
Data-Compression/mixed_compress/lz_compress/: CMakeLists.txt  compress_engine_1.cpp
Data-Compression/mixed_compress/lz_compress/include/: lz_div.h
Data-Compression/mixed_compress/lz_compress/src/: lz_div.cpp
Data-Compression/mixed_compress/second_compress/include/: io_utils.h  lz_div.h
Data-Compression/mixed_compress/second_compress/src/: CMakeLists.txt  compress_engine_1.cpp  lz_alg.cpp  lz_div.cpp
Data-Compression/second_compress/: CMakeLists.txt  compress_engine_2.cpp
